--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,252 +61,7 @@
 	<!-- Prompt old IE users to upgrade their browser or install 'Chrome Frame' -->
 	<!--[if lte IE 7]><p class="old-ie-notification">Apologises for the appearance of this page but you are viewing it in a very old browser that we no longer support, we highly recommend <a href="http://browsehappy.com/" rel="external">upgrading to a more modern browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true" rel="external">install Google Chrome Frame</a> to experience this site and to reap the many other benefits of using a modern browser.</p><![endif]-->
 
-	<!-- Header -->
-	<header class="header<%= " is-header-hero" if header_hero? %>" role="banner">
-
-		<!-- Header secondary -->
-		<div class="header__secondary">
-			<div class="container">
-
-				<!-- Logo -->
-				<a href="/" rel="home" class="logo"><img src="<%= image_path "logo.svg" %>" alt="Westfield" data-svg-fallback="<%= image_path "logo.png" %>"></a>
-				<!-- //Logo -->
-
-				<!-- Menu toggle button for palm devices -->
-				<button type="button" class="btn btn--menu-toggle hide-fully--non-palm js-disabled-hide js-menu-toggle-btn" aria-haspopup="true" aria-owns="header-menu-toggle">
-					<span class="btn--menu-toggle__txt hide-visually">Open menu</span>
-					<span class="btn--menu-toggle__icon"></span>
-				</button>
-				<!-- //Menu toggle button for palm devices -->
-
-				<!-- Shopping centre select, sub/tertiary navigation, my account & favourites -->
-				<div class="header-menu-toggle js-menu-toggle" id="header-menu-toggle">
-
-					<!-- Shopping centre select -->
-					<div class="shopping-centre-select container">
-						<h1><a href="<%= centre_path(params[:centre_id] || params[:id]) %>" rel="home" title="Change shopping centre"><%= @centre.short_name %> <span class="icon icon--arrow-right-full hide-fully--palm" aria-hidden="true"></span></a></h1>
-						<a href="/" class="btn hide-fully--non-palm" rel="home">Change <span class="icon icon--arrow-right icon--flush-top" aria-hidden="true"></span></a>
-					</div>
-					<!-- //Shopping centre select -->
-
-					<!-- Sub navigation -->
-					<div class="sub-nav-container drop-down-container">
-
-						<!-- Menu toggle button for lap small devices -->
-						<button type="button" class="btn btn--menu-toggle js-disabled-hide js-drop-down-trigger" aria-haspopup="true" aria-owns="nav-sub">
-							<span class="btn--menu-toggle__txt hide-visually">Open sub menu</span>
-							<span class="btn--menu-toggle__icon"></span>
-						</button>
-						<!-- //Menu toggle button for lap small devices -->
-
-						<nav class="header-menu-toggle__nav drop-down js-drop-down" role="navigation" aria-label="Sub navigation" id="nav-sub">
-							<!-- [BACK END] `is-active` class needs to be appended to the active anchor element e.g. `<a href="#" class="is-active">` -->
-							<ul class="nav-sub">
-								<!-- Shopping centre opening hours -->
-								<!-- [BACK END] the hours need to be made dynamic -->
-								<li class="open-hours-link"><a href="#"><span class="icon icon--hours" aria-hidden="true"></span> <strong>Open 9am - 6pm today</strong> <span class="icon icon--arrow-right" aria-hidden="true"></span></a></li>
-								<!-- //Shopping centre opening hours -->
-								<li class="shopping-hrs-link"><a href="#"><span class="icon icon--hours icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Shopping Hours</span></a></li>
-								<li><a href="#"><span class="icon icon--dining icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Dining</span></a></li>
-								<li><a href="#"><span class="icon icon--video icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Cinemas</span></a></li>
-								<li><a href="#"><span class="icon icon--info icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Concierge</span></a></li>
-								<li><a href="#"><span class="icon icon--map icon--fixed-width icon--spacing" aria-hidden="true"></span><span class="nav-sub__txt"> Getting There</span></a></li>
-							</ul>
-						</nav>
-
-					</div>
-					<!-- //Sub navigation -->
-
-					<!-- My account / favourites -->
-					<!-- [BACK END] when the user is signed in to their account append the class `is-my-account-signedin` to this `div` element e.g. `<div class="my-account-favs is-my-account-signedin">` -->
-					<div class="my-account-favs is-my-account-signedinx">
-
-						<!-- My account -->
-						<!-- [BACK END] inject relevant HTML based on whether user is signed in/out, see 'signed in' / 'signed out' below -->
-
-						<!-- signed in -->
-						<div class="my-account-container my-account-signedin drop-down-container hide-fully">
-							<!-- [BACK END] for displaying username and avatar we have to have 2 sets of HTML; 1 for palm devices and 1 for non-palm devices, avatar needs to be 64px x 64px -->
-							<strong class="my-account-container__hdr container txt-truncate hide-fully--non-palm">
-								<img src="<%= image_path "dummy/avatar.jpg" %>" alt="User avatar photo"> Hi username
-							</strong>
-							<button type="button" class="my-account-container__hdr btn hide-fully--palm js-drop-down-trigger" aria-haspopup="true" aria-owns="my-account-links">
-								<img src="<%= image_path "dummy/avatar.jpg" %>" alt="User avatar photo"> Hi<span class="hide-visually my-account-signedin__username"> username</span>
-								<span class="hide-visually"> select for settings / sign out</span>
-								<span class="icon icon--arrow-down-full icon--flush-top" aria-hidden="true"></span>
-							</button>
-							<div class="header-menu-toggle__nav header-menu-toggle__mrg-btm drop-down js-drop-down" id="my-account-links">
-								<ul>
-									<!-- [BACK END] `is-active` class needs to be appended to the active anchor element e.g. `<a href="#" class="is-active">` -->
-									<li><a href="#"><span class="icon icon--user icon--fixed-width icon--spacing" aria-hidden="true"></span> Account Settings</a></li>
-									<li><a href="#"><span class="icon icon--signout icon--fixed-width icon--spacing" aria-hidden="true"></span> Sign out</a></li>
-								</ul>
-							</div>
-						</div>
-						<!-- //signed in -->
-
-						<!-- signed out -->
-						<div class="my-account-container my-account-signedout">
-							<strong class="my-account-container__hdr container hide-fully--non-palm">My Account</strong>
-							<div class="header-menu-toggle__nav header-menu-toggle__nav--plain header-menu-toggle__mrg-btm">
-								<a href="#"><span class="icon icon--user icon--fixed-width icon--spacing" aria-hidden="true"></span> Sign in<span class="my-account-signedout__member"> / Become a member</span></a>
-							</div>
-						</div>
-						<!-- //signed out -->
-
-						<!-- //My account -->
-
-						<!-- Favourites (non-palm devices) -->
-						<!-- [BACK END] for this favourites link and count we have to have 2 sets of HTML; 1 for palm devices and 1 for non-palm devices, palm device link is in the source below -->
-						<a href="#" class="favs-link hide-fully--palm">
-							<span class="favs-link__count-icon">
-								<span class="icon icon--favs icon--flush-top icon--kilo" aria-hidden="true"></span>
-								<em>58</em>
-							</span>
-							<span class="favs-link__txt"> Favourites</span>
-						</a>
-						<!-- //Favourites (non-palm devices) -->
-
-					</div>
-					<!-- //My account / favourites -->
-
-					<!-- Tertiary navigation -->
-					<nav class="header-menu-toggle__nav hide-fully--non-palm" role="navigation" aria-label="Tertiary navigation">
-							<ul class="nav-tertiary">
-									<li><a href="#">Terms &amp; Conditions</a></li>
-									<li><a href="#">Privacy Policy</a></li>
-							</ul>
-					</nav>
-					<!-- //Tertiary navigation -->
-
-				</div>
-				<!-- //Shopping centre select, sub/tertiary navigation, my account & favourites -->
-
-				<!-- Search toggle / favourites (palm devices) -->
-				<div class="search-toggle-favs hide-fully--non-palm">
-
-					<!-- Search toggle btn -->
-					<button class="btn js-search-btn-toggle js-disabled-hide" type="button" aria-haspopup="true" aria-owns="search-mini">
-						<span class="icon icon--search icon--spacing icon--flush-top icon--kilo" aria-hidden="true"></span>
-						<span class="hide-visually">Open site search</span>
-					</button>
-					<!-- //Search toggle btn -->
-
-					<!-- Favourites -->
-					<!-- [BACK END] for this favourites link and count we have to have 2 sets of HTML; 1 for palm devices and 1 for non-palm devices, non-palm device link is in the source above -->
-					<a href="#" class="favs-link">
-						<span class="favs-link__count-icon">
-							<span class="icon icon--favs icon--flush-top icon--kilo" aria-hidden="true"></span>
-							<em>99</em>
-						</span>
-						<span class="hide-visually"> Favourites</span>
-					</a>
-					<!-- //Favourites -->
-
-				</div>
-				<!-- //Search toggle / favourites (palm devices) -->
-
-			</div>
-		</div>
-		<!-- //Header secondary -->
-
-		<!-- Centre home page hero banner -->
-		<!-- [BACK END] this HTML should only be rendered for the centre home page -->
-		<div class="header__hero">
-
-			<div class="header__hero__inner hide-fully--non-palm">
-
-				<!-- Shopping centre select -->
-				<div class="shopping-centre-select">
-					<h1><a href="/" rel="home" title="Change shopping centre"><%= @centre.short_name %> <span class="icon icon--arrow-right-full" aria-hidden="true"></span></a></h1>
-				</div>
-				<!-- //Shopping centre select -->
-
-				<!-- Shopping centre opening hours -->
-				<!-- [BACK END] the hours need to be made dynamic -->
-				<a href="#" class="open-hours-link"><span class="icon icon--hours" aria-hidden="true"></span> <strong>Open 9am - 6pm today</strong> <span class="icon icon--arrow-right" aria-hidden="true"></span></a>
-				<!-- //Shopping centre opening hours -->
-
-			</div>
-
-			<!-- Gradient overlay -->
-			<span class="header__hero__gradient"></span>
-			<!-- //Gradient overlay -->
-
-		</div>
-		<!-- //Centre home page hero banner -->
-
-		<!-- Header primary -->
-		<div class="header__primary">
-			<div class="container">
-
-				<!-- Main navigation -->
-				<nav role="navigation" aria-label="Main navigation">
-					<!-- [BACK END] `is-active` class needs to be appended to the active anchor element e.g. `<a href="#" class="is-active">` -->
-						<ul class="nav-main horiz-list horiz-list--fit horiz-list--center horiz-list--dividers">
-						  <li><%= link_to centre_stores_path(params[:centre_id] || params[:id]),
-						    :class => page?(:stores) do %><span class="icon icon--store" aria-hidden="true"></span><span class="hide-visually"> Stores</span><% end %></li>
-						  <li><%= link_to centre_products_path(params[:centre_id] || params[:id]),
-						    :class => page?(:products) do %><span class="icon icon--store" aria-hidden="true"></span><span class="hide-visually"> Products</span><% end %></li>
-						  <li><%= link_to centre_deals_path(params[:centre_id] || params[:id]),
-						    :class => page?(:deals) do %><span class="icon icon--store" aria-hidden="true"></span><span class="hide-visually"> Deals</span><% end %></li>
-						  <li><%= link_to centre_events_path(params[:centre_id] || params[:id]),
-						    :class => page?(:events) do %><span class="icon icon--store" aria-hidden="true"></span><span class="hide-visually"> Events</span><% end %></li>
-						</ul>
-				</nav>
-				<!-- //Main navigation -->
-
-				<!-- Favourites navigation -->
-				<!-- [BACK END] this is only rendered on the 'Favourites' page and in place of the main navigation above, the only difference in the HTML is the counts that exist within each anchor so ideally the same HTML is used with the counts HTML injected in for the 'Favourites' page -->
-				<!-- <nav role="navigation" aria-label="Main navigation">
-						<ul class="nav-main horiz-list horiz-list--fit horiz-list--center horiz-list--dividers">
-								<li><a href="#"><span class="icon icon--store" aria-hidden="true"></span><span class="hide-visually"> Stores</span></a></li>
-								<li><a href="#" class="is-active"><span class="icon icon--products" aria-hidden="true"></span><span class="hide-visually"> Products</span></a></li>
-								<li><a href="#"><span class="icon icon--deals" aria-hidden="true"></span><span class="hide-visually"> Deals</span></a></li>
-								<li><a href="#"><span class="icon icon--events" aria-hidden="true"></span><span class="hide-visually"> Events</span></a></li>
-						</ul>
-				</nav> -->
-				<!-- //Favourites navigation -->
-
-				<!-- Global search -->
-				<div class="header__overlay header__overlay--toggle js-search-toggle" id="search-mini">
-					<div class="container">
-
-						<!-- Search form -->
-						<form class="search-mini" action="#" method="post" role="search">
-							<span class="icon icon--search" aria-hidden="true"></span>
-							<label for="global-search" class="hide-visually">Search site</label>
-							<input type="search" class="search-mini__input" id="global-search" name="global-search" placeholder="Search stores, products, deals &amp; events&#8230;">
-						</form>
-						<!-- //Search form -->
-
-						<!-- Close search -->
-						<button class="btn header__overlay__close-btn hide-fully--non-palm js-search-btn-toggle js-disabled-hide" type="button"><span class="icon icon--close-lrg js-disabled-hide" aria-hidden="true"></span><span class="hide-visually"> Close search</span></button>
-						<!-- //Close search -->
-
-					</div>
-				</div>
-				<!-- //Global search -->
-
-				<!-- Store search -->
-				<!-- [BACK END] the HTML for the store search is only rendered on the 'Stores' page -->
-				<!-- <div class="header__overlay header__overlay--stick">
-						<div class="container">
-							<form class="search-mini search-mini--stores" action="#" method="post" role="search">
-							<span class="icon icon--store" aria-hidden="true"></span>
-							<label for="store-search" class="hide-visually">Search stores</label>
-							<input type="search" class="search-mini__input" id="store-search" name="store-search" placeholder="Search store names, categories &amp; brands&#8230;">
-						</form>
-					</div>
-				</div> -->
-				<!-- //Store search -->
-
-			</div>
-		</div>
-		<!-- //Header primary -->
-
-	</header>
-	<!-- //Header -->
+	<%= render "/layouts/header" %>
 
 	<%= yield %>
 
