--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,6 @@
 					<!-- //Menu toggle button for lap small devices -->
 
 					<nav class="header-menu-toggle__nav drop-down js-drop-down" role="navigation" aria-label="Sub navigation" id="nav-sub">
-						<!-- [BACK END] `is-active` class needs to be appended to the active anchor element e.g. `<a href="#" class="is-active">` -->
 						<ul class="nav-sub">
 							<!-- Shopping centre opening hours -->
 							<!-- [BACK END] the hours need to be made dynamic -->
@@ -184,26 +183,14 @@
 					  <li><%= link_to centre_stores_path(params[:centre_id] || params[:id]),
 					    :class => page?(:stores) do %><span class="icon icon--store" aria-hidden="true"></span><span class="hide-visually"> Stores</span><% end %></li>
 					  <li><%= link_to centre_products_path(params[:centre_id] || params[:id]),
-					    :class => page?(:products) do %><span class="icon icon--store" aria-hidden="true"></span><span class="hide-visually"> Products</span><% end %></li>
+					    :class => page?(:products) do %><span class="icon icon--products icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Products</span><% end %></li>
 					  <li><%= link_to centre_deals_path(params[:centre_id] || params[:id]),
-					    :class => page?(:deals) do %><span class="icon icon--store" aria-hidden="true"></span><span class="hide-visually"> Deals</span><% end %></li>
+					    :class => page?(:deals) do %><span class="icon icon--deals icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Deals</span><% end %></li>
 					  <li><%= link_to centre_events_path(params[:centre_id] || params[:id]),
-					    :class => page?(:events) do %><span class="icon icon--store" aria-hidden="true"></span><span class="hide-visually"> Events</span><% end %></li>
+					    :class => page?(:events) do %><span class="icon icon--events" aria-hidden="true"></span><span class="hide-visually"> Events</span><% end %></li>
 					</ul>
 			</nav>
 			<!-- //Main navigation -->
-
-			<!-- Favourites navigation -->
-			<!-- [BACK END] this is only rendered on the 'Favourites' page and in place of the main navigation above, the only difference in the HTML is the counts that exist within each anchor so ideally the same HTML is used with the counts HTML injected in for the 'Favourites' page -->
-			<!-- <nav role="navigation" aria-label="Main navigation">
-					<ul class="nav-main horiz-list horiz-list--fit horiz-list--center horiz-list--dividers">
-							<li><a href="#"><span class="icon icon--store" aria-hidden="true"></span><span class="hide-visually"> Stores</span></a></li>
-							<li><a href="#" class="is-active"><span class="icon icon--products" aria-hidden="true"></span><span class="hide-visually"> Products</span></a></li>
-							<li><a href="#"><span class="icon icon--deals" aria-hidden="true"></span><span class="hide-visually"> Deals</span></a></li>
-							<li><a href="#"><span class="icon icon--events" aria-hidden="true"></span><span class="hide-visually"> Events</span></a></li>
-					</ul>
-			</nav> -->
-			<!-- //Favourites navigation -->
 
 			<!-- Global search -->
 			<div class="header__overlay header__overlay--toggle js-search-toggle" id="search-mini">
