--- a/app/assets/stylesheets/old-ie.scss
+++ b/app/assets/stylesheets/old-ie.scss
@@ -1,5 +1,4 @@
 
-
 /*
 ▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂
 
@@ -30,7 +29,7 @@ $fix-mqs: 1600;
 /* [IMPORTS]
 -------------------------------------------------------*/
 /* Import everything from 'application.scss' */
-@import "application";
+@import "application.css";
 
 
 /* ======================================================================================
